2001-05-08  Oliver Kiddle  <opk@zsh.org>

	* 14256: Completion/Zsh/Context/_subscript: fix minor mistake

	* 14255: Completion/X/Command/_vnc: fix guard for display numbers

2001-05-08  Peter Stephenson  <pws@csr.com>

	* Andrej: 14248: Src/Modules/zpty.c, Test/comptest: don't use
	O_NOCTTY in one case for zpty on cygwin, remove incorrect flag for
	no blocking with zpty in comptest.

2001-05-08  Sven Wischnowsky  <wischnow@zsh.org>

	* 14252: Completion/Base/Core/_description, Doc/Zsh/compsys.yo:
	empty description means: don't add a -X option

	* 14251: Src/Zle/complist.c, Src/Zle/zle_tricky.c: print
	space/backspace when reaching the last column while printing
	descriptions and the like to avoid a cursor positioning bug
	depending on the kind of terminal (autowrap)

2001-05-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 14240: Completion/Unix/Type/_files: double all backslashes
	before colons in the original pattern

2001-05-06  Bart Schaefer  <schaefer@zsh.org>

	* 14235: Completion/Zsh/Context/_subscript: Improve handling of
	b/n/s subscript flags.

	* 14234: Src/Zle/computil.c: Prevent "no multi-letter values"
	error on values of '\:' and '' in compvalues().

2001-05-05  Bart Schaefer  <schaefer@zsh.org>

	* 14230: Completion/Zsh/Context/_subscript: Fix flag descriptions.

2001-05-04  Oliver Kiddle  <opk@zsh.org>

	* 14227: Completion/Zsh/Context/_subscript: Complete subscript flags.

2001-05-04  Bart Schaefer  <schaefer@zsh.org>

	* 14224: Completion/Unix/Commmand/_cvs: Complete path prefixes for
	subcommands where file completion must reference CVS/Entries.

2001-05-04  Oliver Kiddle  <opk@zsh.org>

	* 14219: Completion/Zsh/Command/_bindkey: update for bindkey
	changes in 14046

2001-05-03  Bart Schaefer  <schaefer@zsh.org>

	* 14217: Completion/Unix/Type/_files: Fix processing of the -F
	option so that it doesn't stomp on other options.

2001-05-03  Oliver Kiddle  <opk@zsh.org>

	* 14216: Completion/Unix/Command/.distfiles,