@@ -1,3 +1,10 @@
+2001-05-08  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 14257: Completion/Base/Utility/_values, Doc/Zsh/compsys.yo,
+	Src/Zle/computil.c: add -S option to specify separator between
+	values and their arguments; make _values add the
+	value-separator as a suffix for most types of actions
+
 2001-05-08  Oliver Kiddle  <opk@zsh.org>
 
 	* 14256: Completion/Zsh/Context/_subscript: fix minor mistake
